@@ -186,6 +186,81 @@ class Cookie(dict):
         return '<%s: [%s]>' % (self.__class__.__name__,
                                ', '.join(map(repr, self.values())))
 
+def make_cookie(name, value, max_age=None, expires=None, path='/',
+                domain=None, secure=False, httponly=False, comment=None):
+    """
+    Create a cookie conforming to rfc2109. The value can be used to
+    generate a ``Set-Cookie`` header on an HTTP response.
+
+    ``name``
+
+       The cookie name as a string or bytestring.
+
+    ``value``
+
+       The payload as a string or bytestring. If the payload is a string
+       it will be utf-8 encoded.
+
+    ``max_age``
+
+       An integer representing a number of seconds or ``None``.  If this
+       value is an integer, it is used as the ``Max-Age`` of the
+       generated cookie.  If ``expires`` is not passed and this value is
+       an integer, the ``max_age`` value will also influence the
+       ``Expires`` value of the cookie (``Expires`` will be set to now +
+       max_age).  If this value is ``None``, the cookie will not have a
+       ``Max-Age`` value (unless ``expires`` is also sent).
+
+    ``expires``
+
+       A ``datetime.timedelta`` object representing an amount of time or
+       the value ``None``.  A non-``None`` value is used to generate the
+       ``Expires`` value of the generated cookie.  If ``max_age`` is not
+       passed, but this value is not ``None``, it will influence the
+       ``Max-Age`` header (``Max-Age`` will be 'expires_value -
+       datetime.utcnow()').  If this value is ``None``, the ``Expires``
+       cookie value will be unset (unless ``max_age`` is also passed).
+
+    ``path``
+
+       A string representing the cookie ``Path`` value.  It defaults to
+       ``/``.
+
+    ``domain``
+
+       A string representing the cookie ``Domain``, or ``None``.  If
+       domain is ``None``, no ``Domain`` value will be sent in the
+       cookie.
+
+    ``secure``
+
+       A boolean.  If it's ``True``, the ``secure`` flag will be sent in
+       the cookie, if it's ``False``, the ``secure`` flag will not be
+       sent in the cookie.
+
+    ``httponly``
+
+       A boolean.  If it's ``True``, the ``HttpOnly`` flag will be sent
+       in the cookie, if it's ``False``, the ``HttpOnly`` flag will not
+       be sent in the cookie.
+
+    ``comment``
+
+       A string representing the cookie ``Comment`` value, or ``None``.
+       If ``comment`` is ``None``, no ``Comment`` value will be sent in
+       the cookie.
+    """
+    morsel = Morsel(bytes_(name), bytes_(value))
+    if domain:
+        morsel.domain = bytes_(domain)
+    morsel.path = bytes_(path)
+    morsel.httponly = httponly
+    morsel.secure = secure
+    morsel.max_age = max_age
+    morsel.expires = expires
+    if comment:
+        morsel.comment = bytes_(comment)
+    return morsel.serialize()
 
 def _parse_cookie(data):
     if PY3: # pragma: no cover
